--- a/src/style1.css
+++ b/src/style1.css
@@ -3,38 +3,93 @@
 /* Use the 'Lato' font family at 18px throughout the body of the document, and cover the background with the 'map-bg.jpg' image. */
 nav {font-family: sans-serif; font-size: 10px;}
 
-#main {width: 900px; margin: 10px auto;}
+#main {
+   width: 900px; 
+   padding-left: 140px;
+   padding-right: 120px;
+   padding-bottom: 10px;
+   margin: 10px auto;
+   display: flex;
+   flex-wrap: wrap;
+   font-size: 18px;
+   background-image: url(/src/img/map-bg.jpg);
+}
+
+header{
+   width: 100%;
+}
+
+footer{
+   width: 91%;
+   border: 2px dashed rosybrown;
+}
+
 /* Use the 'Supermercado One' font at 45px (colored #5d4037) for the restaurant name. */
 
 /*Set the menu to flexible ( the display flex) and use justify-content to define the space between columns */
 #menu {
+   display: flex;
+}
 
+h1{
+   font-family: "Supermercado One";
+   font-size: 40px;
+   color: #5d4037;
 }
 
 /*Set a column width*/
 .menu-side {
    width: 420px;
+   margin-right: 0px;
 }
 
 /* Set the separator between the columns to be 2px dashed rosybrown. */
 #vertical-line {
-    
+   border-right: 2px dotted rosybrown;
+   margin-right: 50px;
 }
 section {margin-bottom: 50px;}
 
 /* Show each of the section headings of the menu (e.g. "Starters") in small caps, colored #6d4c41. */
-h2 {margin: 0;}
+h2 {
+   font-variant: small-caps;
+   color: #6d4c41;
+   margin: 0;
+}
 
 /* Make the name of each menu item appear in bold in a 20px size. */
 
+dl{
+   display: flex;
+   flex-direction: column;
+}
 
+dt{
+   font-size: 20px;
+   font-weight: bold;
+}
 
-dd {margin: 0 0 12px 0; display: flex;}
+dd {
+   margin: 0 0 12px 0; 
+   display: flex;
+   width: 85%;
+}
 
 .details {order: 1;}
 
 /* Show the price of each item in a large font, in the color named 'firebrick' */
-.price {order: 2; padding-left: 10px;}
+.price {
+   color: firebrick;
+   order: 2; 
+   padding-left: 10px;
+}
+
+#price4{
+   position: relative;
+   left: 4px;
+}
 
 /* Draw a 2px dashed rosybrown border around the address/footer */
-address {padding: 10px;}
+address {
+   padding: 10px;
+}
