--- a/src/style2.css
+++ b/src/style2.css
@@ -3,25 +3,75 @@
 /* Use the 'Oswald' font family at 14px throughout the body of the document. */
 nav {font-family: sans-serif; font-size: 10px;}
 
-#main {width: 900px; margin: 10px auto;}
+#main {
+   width: 900px; 
+   margin: 10px auto;
+   display: flex;
+   flex-wrap: wrap;
+}
+
+header{
+   width: 100%;
+}
+
+body{
+   font-family: "Oswald";
+   font-size: 14px;
+}
+
+footer{
+   width: 99%;
+   display: flex;
+   justify-content: right ;
+   text-align: right;
+}
+
+
+h1{
+   font-family: "Bungee Inline";
+   font-size: 46px;
+}
+
 /* Use the 'Bungee Inline' font at 46px and lighter weight for the restaurant name. */
 
 
 /*Set the menu to flexible ( the display flex) and use justify-content to define the space between columns */
 #menu {
-
+   display: flex;
 }
 /*Set a column width*/
 .menu-side {
    width: 420px;
 }
+
+.left{
+   margin-right: 50px;
+}
+
 section {margin-bottom: 20px; padding: 10px;}
 
 /* Show each of the section headings of the menu (e.g. "Starters") in uppercase. */
 h2 {margin-top: 0;}
 
+#starters{
+   border: 2px solid black;
+}
+
+#desserts{
+   border: 2px solid black;
+}
+
 /* Make the name of each menu item appear in bold in a 16px size. */
-dt {display: inline;}
+dt {
+   display: inline;
+   font-size: 16px;
+   font-weight: bold;
+}
+
+dt::after{
+   content: ",";
+}
+
 /* Make a comma appear after the name of each menu item (before the description) */
 
 dd {display: inline; margin: 0;}
